# fastapi-di-depends-issue

./: pyproject.toml
fastapi_di_depends_issue/: app.py  container.py  third_party.py
tests/: test_fastapi_di_depends_issue.py
